2009-07-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/random.c (DestroyMagickRandomGenerator): Cleanup thread
	specific random kernel data.

	* magick/tsd.c (MagickTsdKeyCreate): Fix glitch when built without
	any threads support.

2009-07-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/benchmarks.rst: Update GraphicsMagick vs ImageMagick image
	processing benchmark results.

2009-07-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/OpenMP.rst: Update performance measurements for readily
	available systems.

	* NEWS.txt: Updated to reflect latest changes.

2009-07-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* png: Updated libpng to 1.2.38.

2009-07-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (GetImageInfo): Default interlace for ImageInfo
	is now UndefinedInterlace so that it is possible to preserve the
	original interlace setting for the image file.  Code depending on
	the previous default setting of NoInterlace is adjusted to suit.
	This is a potentially risky change given the brittle nature of
	some of the legacy code.

	* coders/tiff.c (ReadTIFFImage): Stripped reader needs to read
	planar TIFF plane-wise in order to work with libtiff's internal
	buffering.
	(ReadTIFFImage): Tiled reader needs to read planar TIFF plane-wise
	in order to work with libtiff's internal buffering.
	(WriteTIFFImage): Tiled writer needs to output planar TIFF
	plane-wise in order to work with libtiff's internal buffering.

2009-07-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (MontageUsage): Reconcile montage help output
	with actual montage options.

2009-07-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): Allow the user to be able to
	specify rows_per_strip when using JPEG compression.  The
	rows_per_strip value rounded up to the nearest multiple of 16.

2009-07-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
