@@ -35,10 +35,10 @@ extern "C" {
 */
 #define MagickPackageName "GraphicsMagick"
 #define MagickCopyright  "Copyright (C) 2002-2009 GraphicsMagick Group.\nAdditional copyrights and licenses apply to this software.\nSee http://www.GraphicsMagick.org/www/Copyright.html for details."
-#define MagickLibVersion  0x040000
+#define MagickLibVersion  0x040100
 #define MagickLibVersionText  "1.4"
-#define MagickLibVersionNumber 4,0,0
-#define MagickChangeDate   "20090723"
+#define MagickLibVersionNumber 4,1,0
+#define MagickChangeDate   "20090724"
 #define MagickReleaseDate  "unreleased"
 
 
