@@ -21,6 +21,15 @@
 </tr>
 </table>
 <p>
+2009-07-24  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/random.c (DestroyMagickRandomGenerator): Trick to free
+        thread specific random kernel contexts simply locks up with MSVC's
+        OpenMP, so remove this functionality.
+
+</UL>
+<p>
 2009-07-23  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
