@@ -1,3 +1,9 @@
+2009-07-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/random.c (DestroyMagickRandomGenerator): Trick to free
+	thread specific random kernel contexts simply locks up with MSVC's
+	OpenMP, so remove this functionality.
+
 2009-07-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/random.c (DestroyMagickRandomGenerator): Cleanup thread
